[package]
name = "config-tool"
version = "0.1.0"
authors = ["Sam Blazes <blazes.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde                     = {version = "1.0.126", features = ["derive"]}

winapi                    = {version = "0.3.9", features = ["winusb"]}
rusb                      = {version = "0.8.1"}

cgmath                    = {version = "0.17.0", features = ["serde"]}

tokio                     = {version = "1", features = ["full"]}
tokio-util                = {version = "0.6.6", features = ["full"]}

parking_lot               = {version = "0.11.1"}

serialport                = {version = "4.0.1"}

winit                     = {version = "0.24.0"}
winit_input_helper        = {version = "0.9.0"}
nfd                       = {version = "0.0"}
clipboard                 = {version = "0.5.0"}

vulkano                   = {version = "0.23.0"}
vulkano-win               = {version = "0.23.0"}
vulkano-shaders           = {version = "0.23.0"}

image                     = {version = "0.23"}
imgui                     = {version = "0.7"}
imgui-vulkano-renderer    = {version = "0.7.1"}
imgui-winit-support       = {version = "0.7.1"}

simplers_optimization     = {version = "0.4.2"}